Tag widget visibility fixes
Make background transparent.  Tag displays now mark inserted tags 'p' (for
private) on creation, so nothing will show until it's known that the tag _isn't_
actually private.

tracks internal commit 8e8f36e2948dea65de06101a405cf49e88d2623e

--- a/plugins/Ajax/htdocs/images/tagui.css
+++ b/plugins/Ajax/htdocs/images/tagui.css
@@ -96,10 +96,10 @@ div.tag-widget .tmenu > li:hover {
 }
 
 .tag-widget {
-	display: none;
+	display: block;
 	position: relative;
 	z-index: 10;
-	background-color: white;
+	background-color: transparent;
 	border: 4px dotted darkgray;
 	padding: 0 0.4em 0 0.8em;
 	min-width: 6em;
